lab02/log/build_2024-10-26_18-49-36/lab02_pkg/stderr.log
  File "/home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 97
    if normalized_actual_angle < math.pi/2
                                          ^
SyntaxError: expected ':'

